# StrategyGameEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  main.cpp  run.sh  test.sh
SGE/: readme.txt
src/: .clang-format  CMakeLists.txt  main.cpp
src/abstract/module/: ModuleInterface.hpp
src/abstract/platform/: PlatformInterface.hpp  WindowInterface.hpp
src/abstract/platform/DrawManager/: DrawManagerInterface.hpp  DrawableInterface.hpp
src/abstract/platform/EventsManager/: EventsManagerInterface.hpp
src/abstract/platform/SoundBox/: SoundBoxInterface.hpp
src/abstract/platform/StateMachine/: StateInterface.hpp  StateMachineInterface.hpp
src/concrete/module/GUIModule/: GUIModule.cpp  TestGUIModule.cpp  TestGUIModule.hpp
src/concrete/module/GameModule/: TestGameModule.cpp  TestGameModule.hpp
src/concrete/platform/: DefaultWindow.hpp
src/include/: CMakeLists.txt  staticHeader.hpp
src/production/: main.cpp
src/production/abstract/: EngineInterface.hpp
src/production/abstract/platform/: PlatformInterface.hpp
src/production/abstract/platform/DrawManager/: DrawManagerInterface.hpp  DrawableInterface.hpp
src/production/abstract/platform/EventsManager/: EventsManagerInterface.hpp
src/production/abstract/platform/StateMachine/: StateInterface.hpp  StateMachineInterface.hpp
src/production/abstract/platform/resources/Repository/: SoundRepositoryInterface.hpp  TextRepositoryInterface.hpp  TextureRepositoryInterface.hpp
src/production/concrete/: StrategyGameEngine.hpp
src/production/concrete/module/GUIModule/: GUIModule.hpp
src/production/concrete/module/GameModule/: GameModule.cpp  GameModule.hpp
src/production/concrete/module/GameModule/logic/: TODO
src/production/concrete/platform/resources/: Sound.hpp  Texture.hpp
src/tests/: main.cpp
src/tests/module/GUIModule/: TestGUIModule.cpp  TestGUIModule.hpp
src/tests/module/GUIModule/logic/: TODO
src/tests/module/GameModule/: TestGameModule.cpp  TestGameModule.hpp
tests/: CMakeLists.txt  main.cpp
